[package]
name = "discord_rpc_builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
once_cell = "1.8"
ctrlc = "3.1"
discord-rich-presence = { git = "https://github.com/nickofolas/discord-rich-presence" }
